// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compose actions custom actions creates actions in custom endpoint 1`] = `
[
  {
    "actions": [],
    "authSelect": [],
    "authorize": undefined,
    "fieldset": undefined,
    "kind": "custom-one",
    "method": "GET",
    "parentContext": [],
    "path": "customGet",
    "responds": true,
    "response": undefined,
    "target": {
      "alias": "org",
      "identifyWith": {
        "paramName": "org_id",
        "path": [
          "id",
        ],
        "type": "integer",
      },
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
      "select": [
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
    },
  },
  {
    "actions": [
      {
        "alias": "newOrg",
        "changeset": [
          {
            "name": "name",
            "setter": {
              "default": undefined,
              "fieldsetAccess": [
                "newOrg",
                "name",
              ],
              "kind": "fieldset-input",
              "required": false,
              "type": "string",
            },
          },
        ],
        "filter": undefined,
        "isPrimary": false,
        "kind": "update-one",
        "model": "Org",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "alias",
              "namePath": [
                "newOrg",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
        "targetPath": [
          "org",
        ],
      },
    ],
    "authSelect": [],
    "authorize": undefined,
    "fieldset": {
      "kind": "record",
      "nullable": false,
      "record": {
        "newOrg": {
          "kind": "record",
          "nullable": false,
          "record": {
            "name": {
              "kind": "field",
              "nullable": false,
              "required": false,
              "type": "string",
              "validate": undefined,
            },
          },
        },
      },
    },
    "kind": "custom-one",
    "method": "PATCH",
    "parentContext": [],
    "path": "customUpdate",
    "responds": true,
    "response": undefined,
    "target": {
      "alias": "org",
      "identifyWith": {
        "paramName": "org_id",
        "path": [
          "id",
        ],
        "type": "integer",
      },
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
      "select": [
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
    },
  },
  {
    "actions": [
      {
        "kind": "delete-one",
        "model": "Org",
        "targetPath": [
          "org",
        ],
      },
    ],
    "authSelect": [],
    "authorize": undefined,
    "fieldset": undefined,
    "kind": "custom-one",
    "method": "DELETE",
    "parentContext": [],
    "path": "customDelete",
    "responds": true,
    "response": undefined,
    "target": {
      "alias": "org",
      "identifyWith": {
        "paramName": "org_id",
        "path": [
          "id",
        ],
        "type": "integer",
      },
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
      "select": [
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
    },
  },
  {
    "actions": [],
    "authSelect": [],
    "authorize": undefined,
    "fieldset": undefined,
    "kind": "custom-many",
    "method": "GET",
    "parentContext": [],
    "path": "customList",
    "responds": true,
    "response": undefined,
    "target": {
      "alias": "org",
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
      "select": [
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
    },
  },
  {
    "actions": [
      {
        "alias": "org",
        "changeset": [
          {
            "name": "name",
            "setter": {
              "default": undefined,
              "fieldsetAccess": [
                "org",
                "name",
              ],
              "kind": "fieldset-input",
              "required": true,
              "type": "string",
            },
          },
        ],
        "isPrimary": false,
        "kind": "create-one",
        "model": "Org",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "alias",
              "namePath": [
                "org",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
        "targetPath": [
          "Org",
        ],
      },
    ],
    "authSelect": [],
    "authorize": undefined,
    "fieldset": {
      "kind": "record",
      "nullable": false,
      "record": {
        "org": {
          "kind": "record",
          "nullable": false,
          "record": {
            "name": {
              "kind": "field",
              "nullable": false,
              "required": true,
              "type": "string",
              "validate": undefined,
            },
          },
        },
      },
    },
    "kind": "custom-many",
    "method": "POST",
    "parentContext": [],
    "path": "customCreate",
    "responds": true,
    "response": undefined,
    "target": {
      "alias": "org",
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
      "select": [
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
    },
  },
]
`;

exports[`compose actions native actions can create nested relations through transient references 1`] = `
[
  {
    "alias": "repo",
    "changeset": [
      {
        "name": "name",
        "setter": {
          "default": undefined,
          "fieldsetAccess": [
            "name",
          ],
          "kind": "fieldset-input",
          "required": true,
          "type": "string",
        },
      },
      {
        "name": "org_id",
        "setter": {
          "default": undefined,
          "fieldsetAccess": [
            "org_id",
          ],
          "kind": "fieldset-input",
          "required": true,
          "type": "integer",
        },
      },
    ],
    "isPrimary": true,
    "kind": "create-one",
    "model": "Repo",
    "select": [
      {
        "alias": "org",
        "kind": "nested-select",
        "namePath": [
          "repo",
          "org",
        ],
        "refKey": "Repo.org",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "alias",
              "namePath": [
                "repo",
                "org",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "repo",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "Repo",
    ],
  },
  {
    "alias": "log",
    "changeset": [
      {
        "name": "org_id",
        "setter": {
          "kind": "reference-value",
          "target": {
            "access": [
              "org",
              "id",
            ],
            "alias": "repo",
          },
        },
      },
    ],
    "isPrimary": false,
    "kind": "create-one",
    "model": "OrgLog",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "log",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "repo",
      "org",
      "logs",
    ],
  },
]
`;

exports[`compose actions native actions can update deeply nested references 1`] = `
[
  {
    "alias": "$action_0",
    "changeset": [],
    "filter": undefined,
    "isPrimary": true,
    "kind": "update-one",
    "model": "Issue",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "$action_0",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "issue",
    ],
  },
  {
    "alias": "org",
    "changeset": [
      {
        "name": "name",
        "setter": {
          "default": undefined,
          "fieldsetAccess": [
            "org",
            "name",
          ],
          "kind": "fieldset-input",
          "required": false,
          "type": "string",
        },
      },
    ],
    "filter": undefined,
    "isPrimary": false,
    "kind": "update-one",
    "model": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "issue",
      "repo",
      "org",
    ],
  },
]
`;

exports[`compose actions native actions correctly implements default values: create 1`] = `
{
  "actions": [
    {
      "alias": "ox",
      "changeset": [
        {
          "name": "name",
          "setter": {
            "default": undefined,
            "fieldsetAccess": [
              "name",
            ],
            "kind": "fieldset-input",
            "required": true,
            "type": "string",
          },
        },
        {
          "name": "description",
          "setter": {
            "default": undefined,
            "fieldsetAccess": [
              "description",
            ],
            "kind": "fieldset-input",
            "required": true,
            "type": "string",
          },
        },
        {
          "name": "uuid",
          "setter": {
            "default": {
              "args": [
                {
                  "kind": "literal",
                  "literal": {
                    "kind": "string",
                    "value": "uuid-",
                  },
                },
                {
                  "args": [
                    {
                      "args": [],
                      "kind": "function",
                      "name": "now",
                    },
                  ],
                  "kind": "function",
                  "name": "stringify",
                },
              ],
              "kind": "function",
              "name": "concat",
            },
            "fieldsetAccess": [
              "uuid",
            ],
            "kind": "fieldset-input",
            "required": false,
            "type": "string",
          },
        },
        {
          "name": "extras_id",
          "setter": {
            "default": undefined,
            "fieldsetAccess": [
              "extras_id",
            ],
            "kind": "fieldset-input",
            "required": true,
            "type": "integer",
          },
        },
      ],
      "isPrimary": true,
      "kind": "create-one",
      "model": "Org",
      "select": [
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "ox",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
      "targetPath": [
        "Org",
      ],
    },
  ],
  "authSelect": [],
  "authorize": undefined,
  "fieldset": {
    "kind": "record",
    "nullable": false,
    "record": {
      "description": {
        "kind": "field",
        "nullable": false,
        "required": true,
        "type": "string",
        "validate": undefined,
      },
      "extras_id": {
        "kind": "field",
        "nullable": false,
        "required": true,
        "type": "integer",
        "validate": undefined,
      },
      "name": {
        "kind": "field",
        "nullable": false,
        "required": true,
        "type": "string",
        "validate": undefined,
      },
      "uuid": {
        "kind": "field",
        "nullable": false,
        "required": false,
        "type": "string",
        "validate": undefined,
      },
    },
  },
  "kind": "create",
  "parentContext": [],
  "response": [
    {
      "alias": "id",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "id",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "integer",
        "nullable": false,
      },
    },
    {
      "alias": "name",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "name",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "string",
        "nullable": false,
      },
    },
    {
      "alias": "description",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "description",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "string",
        "nullable": false,
      },
    },
    {
      "alias": "uuid",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "uuid",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "string",
        "nullable": false,
      },
    },
    {
      "alias": "extras_id",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "extras_id",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "integer",
        "nullable": false,
      },
    },
  ],
  "target": {
    "alias": "org",
    "kind": "model",
    "name": "Org",
    "namePath": [
      "Org",
    ],
    "retType": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose actions native actions correctly implements default values: update 1`] = `
{
  "actions": [
    {
      "alias": "ox",
      "changeset": [
        {
          "name": "name",
          "setter": {
            "default": undefined,
            "fieldsetAccess": [
              "name",
            ],
            "kind": "fieldset-input",
            "required": false,
            "type": "string",
          },
        },
        {
          "name": "description",
          "setter": {
            "default": undefined,
            "fieldsetAccess": [
              "description",
            ],
            "kind": "fieldset-input",
            "required": true,
            "type": "string",
          },
        },
        {
          "name": "uuid",
          "setter": {
            "kind": "literal",
            "literal": {
              "kind": "string",
              "value": "new uuid",
            },
          },
        },
        {
          "name": "extras",
          "setter": {
            "fieldsetAccess": [
              "extras_name",
            ],
            "kind": "fieldset-reference-input",
            "through": [
              "name",
            ],
          },
        },
      ],
      "filter": undefined,
      "isPrimary": true,
      "kind": "update-one",
      "model": "Org",
      "select": [
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "ox",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
      "targetPath": [
        "org",
      ],
    },
  ],
  "authSelect": [],
  "authorize": undefined,
  "fieldset": {
    "kind": "record",
    "nullable": false,
    "record": {
      "description": {
        "kind": "field",
        "nullable": false,
        "required": true,
        "type": "string",
        "validate": undefined,
      },
      "extras_name": {
        "kind": "field",
        "nullable": false,
        "required": true,
        "type": "string",
        "validate": undefined,
      },
      "name": {
        "kind": "field",
        "nullable": false,
        "required": false,
        "type": "string",
        "validate": undefined,
      },
    },
  },
  "kind": "update",
  "parentContext": [],
  "response": [
    {
      "alias": "id",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "id",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "integer",
        "nullable": false,
      },
    },
    {
      "alias": "name",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "name",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "string",
        "nullable": false,
      },
    },
    {
      "alias": "description",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "description",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "string",
        "nullable": false,
      },
    },
    {
      "alias": "uuid",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "uuid",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "string",
        "nullable": false,
      },
    },
    {
      "alias": "extras_id",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "extras_id",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "integer",
        "nullable": false,
      },
    },
  ],
  "target": {
    "alias": "org",
    "identifyWith": {
      "paramName": "org_id",
      "path": [
        "id",
      ],
      "type": "integer",
    },
    "kind": "model",
    "name": "Org",
    "namePath": [
      "Org",
    ],
    "retType": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose actions native actions correctly sets parent context 1`] = `
[
  {
    "alias": "$action_0",
    "changeset": [
      {
        "name": "name",
        "setter": {
          "default": undefined,
          "fieldsetAccess": [
            "name",
          ],
          "kind": "fieldset-input",
          "required": true,
          "type": "string",
        },
      },
      {
        "name": "org_id",
        "setter": {
          "kind": "reference-value",
          "target": {
            "access": [
              "id",
            ],
            "alias": "myorg",
          },
        },
      },
    ],
    "isPrimary": true,
    "kind": "create-one",
    "model": "Repo",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "$action_0",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "repos",
    ],
  },
]
`;

exports[`compose actions native actions create action doesn't produce inputs for fields with default 1`] = `
{
  "kind": "record",
  "nullable": false,
  "record": {
    "description": {
      "kind": "field",
      "nullable": true,
      "required": true,
      "type": "string",
      "validate": undefined,
    },
  },
}
`;

exports[`compose actions native actions sets default action if not given 1`] = `
[
  {
    "alias": "$action_0",
    "changeset": [
      {
        "name": "name",
        "setter": {
          "default": undefined,
          "fieldsetAccess": [
            "name",
          ],
          "kind": "fieldset-input",
          "required": false,
          "type": "string",
        },
      },
    ],
    "filter": undefined,
    "isPrimary": true,
    "kind": "update-one",
    "model": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "$action_0",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "org",
    ],
  },
]
`;

exports[`compose actions native actions succeeds for basic composite create 1`] = `
[
  {
    "alias": "e",
    "changeset": [],
    "isPrimary": false,
    "kind": "create-one",
    "model": "OrgExtra",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "e",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "OrgExtra",
    ],
  },
  {
    "alias": "org",
    "changeset": [
      {
        "name": "is_new",
        "setter": {
          "kind": "literal",
          "literal": {
            "kind": "boolean",
            "value": true,
          },
        },
      },
      {
        "name": "name",
        "setter": {
          "default": undefined,
          "fieldsetAccess": [
            "name",
          ],
          "kind": "fieldset-input",
          "required": true,
          "type": "string",
        },
      },
      {
        "name": "extras_id",
        "setter": {
          "kind": "reference-value",
          "target": {
            "access": [
              "id",
            ],
            "alias": "e",
          },
        },
      },
    ],
    "isPrimary": true,
    "kind": "create-one",
    "model": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "Org",
    ],
  },
  {
    "alias": "oo",
    "changeset": [
      {
        "name": "org_id",
        "setter": {
          "kind": "reference-value",
          "target": {
            "access": [
              "id",
            ],
            "alias": "org",
          },
        },
      },
    ],
    "isPrimary": false,
    "kind": "create-one",
    "model": "OrgOwner",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "oo",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "OrgOwner",
    ],
  },
]
`;

exports[`compose actions native actions succeeds when extra input is defined and referenced 1`] = `
[
  {
    "alias": "org",
    "changeset": [
      {
        "name": "name",
        "setter": {
          "args": [
            {
              "kind": "literal",
              "literal": {
                "kind": "string",
                "value": "Mr/Mrs ",
              },
            },
            {
              "fieldsetAccess": [
                "iname",
              ],
              "kind": "fieldset-input",
              "required": false,
              "type": "string",
            },
          ],
          "kind": "function",
          "name": "concat",
        },
      },
    ],
    "isPrimary": true,
    "kind": "create-one",
    "model": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "Org",
    ],
  },
]
`;

exports[`compose actions native actions succeeds when extra input is defined and referenced 2`] = `
{
  "kind": "record",
  "nullable": false,
  "record": {
    "iname": {
      "kind": "field",
      "nullable": false,
      "required": true,
      "type": "string",
      "validate": {
        "args": [
          {
            "kind": "literal",
            "literal": {
              "kind": "integer",
              "value": 4,
            },
          },
        ],
        "kind": "call",
        "validator": "minLength",
      },
    },
  },
}
`;

exports[`compose actions native actions succeeds with arithmetic expressions in setters 1`] = `
[
  {
    "alias": "$action_0",
    "changeset": [
      {
        "name": "name",
        "setter": {
          "kind": "literal",
          "literal": {
            "kind": "string",
            "value": "new name",
          },
        },
      },
      {
        "name": "description",
        "setter": {
          "args": [
            {
              "kind": "changeset-reference",
              "referenceName": "name",
            },
            {
              "kind": "literal",
              "literal": {
                "kind": "string",
                "value": " is great",
              },
            },
          ],
          "kind": "function",
          "name": "concat",
        },
      },
      {
        "name": "descLength",
        "setter": {
          "args": [
            {
              "args": [
                {
                  "kind": "changeset-reference",
                  "referenceName": "description",
                },
              ],
              "kind": "function",
              "name": "length",
            },
            {
              "kind": "literal",
              "literal": {
                "kind": "integer",
                "value": 1,
              },
            },
          ],
          "kind": "function",
          "name": "+",
        },
      },
    ],
    "isPrimary": true,
    "kind": "create-one",
    "model": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "$action_0",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "Org",
    ],
  },
]
`;

exports[`compose actions native actions succeeds with nested sibling reference 1`] = `
[
  {
    "alias": "$action_0",
    "changeset": [
      {
        "name": "name",
        "setter": {
          "default": undefined,
          "fieldsetAccess": [
            "name",
          ],
          "kind": "fieldset-input",
          "required": true,
          "type": "string",
        },
      },
      {
        "name": "name2",
        "setter": {
          "kind": "changeset-reference",
          "referenceName": "name",
        },
      },
      {
        "name": "name3",
        "setter": {
          "kind": "changeset-reference",
          "referenceName": "name2",
        },
      },
    ],
    "isPrimary": true,
    "kind": "create-one",
    "model": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "$action_0",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
    "targetPath": [
      "Org",
    ],
  },
]
`;

exports[`compose actions native actions succeeds with nested sibling reference 2`] = `
{
  "kind": "record",
  "nullable": false,
  "record": {
    "name": {
      "kind": "field",
      "nullable": false,
      "required": true,
      "type": "string",
      "validate": undefined,
    },
  },
}
`;
